--- a/app/scss/util/breakpoints.scss
+++ b/app/scss/util/breakpoints.scss
@@ -1,25 +1,25 @@
-// 640px, 1024px, 1400px
+// 640px, 950px, 1400px
 $breakpoints-up:(
     'medium': '40em',
-    'large': '64em',
+    'large': '59.375em',
     'xlarge': '87.5em',
 );
 
-// 639px, 1023px, 1399px
+// 639px, 949px, 1399px
 $breakpoints-down:(
     'medium': '39.9375em',
-    'large': '63.9375em',
+    'large': '59.9125em',
     'xlarge': '87.4375em',
 );
 
 @mixin breakpoint($size) {
-    @media (min-width: map-get($breakpoints-up, $size)) {
+    @media (min-width: map.get($breakpoints-up, $size)) {
         @content;
     }
 }
 
 @mixin breakpoint-down($size) {
-    @media (max-width: map-get($breakpoints-down, $size)) {
+    @media (max-width: map.get($breakpoints-down, $size)) {
         @content;
     }
 }
