--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -6,9 +6,9 @@
     --instagram-start: hsl(37, 97%, 70%);
     --instragram-end: hsl(329, 70%, 58%);
     --youtube: hsl(348, 97%, 39%);
-    --toggle-darktheme-start: hsl(210, 78%, 56%);
-    --toggle-darktheme-end: hsl(146, 68%, 55%);
-    --toggle-lighttheme: hsl(230, 22%, 74%);
+    --toggle-bg-light: hsl(230, 22%, 74%);
+    --toggle-bg-start: hsl(210, 78%, 56%);
+    --toggle-bg-end: hsl(146, 68%, 55%);
     --dark-bg: hsl(230, 17%, 14%);
     --dark-top-bg: hsl(232, 19%, 15%);
     --dark-card: hsl(228, 28%, 20%);
@@ -19,5 +19,4 @@
     --light-card: hsl(227, 47%, 96%);
     --light-text1: hsl(228, 12%, 44%);
     --light-text2: hsl(230, 17%, 14%);
-
 }
