--- a/app/scss/globals/layout.scss
+++ b/app/scss/globals/layout.scss
@@ -1,11 +1,11 @@
-@use '../util/' as *;
+@use '../util' as *;
 
 .container {
-    max-width: rem(1110);
-    padding: 0 rem(25);
-    margin: 0 auto;
+	padding: 0 rem(25);
+	max-width: rem(1110);
+	margin: 0 auto rem(46);
 
-    @include breakpoint(large) {
-        padding: 0;
-    }
+	@include breakpoint(large) {
+		padding: 0;
+	}
 }
