--- a/app/scss/components/toggle.scss
+++ b/app/scss/components/toggle.scss
@@ -17,7 +17,7 @@
         &[for='system'] {
             grid-column: 1 / 4;
             grid-row: 2 / 3;
-            justify-self: center;;
+            justify-self: center;
         }
         &[for='light'] {
             grid-column: 3 / 4;
